🐛 🐛 fix issues on small screens

--- a/service/styles/fragments/_container.scss
+++ b/service/styles/fragments/_container.scss
@@ -8,7 +8,7 @@ $container--padding__desktop: 24px; // container, left and right padding (deskto
   margin: 0 auto;
   padding-left: $container--padding__mobile;
   padding-right: $container--padding__mobile;
-
+  box-sizing: border-box;
   @include responsive(tablet) {
     padding-left: $container--padding__desktop;
     padding-right: $container--padding__desktop;
@@ -27,8 +27,8 @@ $container--padding__desktop: 24px; // container, left and right padding (deskto
   max-width: $phone + ($container--padding__desktop * 2);
 }
 
-[class*='container'] {
-  [class*='container'] {
+[class*="container"] {
+  [class*="container"] {
     padding-left: 0;
     padding-right: 0;
   }
