--- a/service/styles/fragments/_footer.scss
+++ b/service/styles/fragments/_footer.scss
@@ -65,8 +65,8 @@ footer {
           margin-right: 0;
         }
         @media (max-width: 50em) {
-          margin-right: 0;
-          margin-bottom: 0.5em;
+         
+          margin-bottom: 0.64em;
           &:last-child {
             margin-right: 0;
           }
