--- a/service/styles/fragments/_navbar.scss
+++ b/service/styles/fragments/_navbar.scss
@@ -26,7 +26,7 @@ nav {
   & > div {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
   }
   .menu-desktop {
     @media (max-width: 50em) {
